# gtest_practice

./: .gitignore  CMakeLists.txt  README.md
src/: mock_unit_test.h  unit_test.cpp  unit_test.h
test/: test_unit_test.cpp
